Achievements styles fix. Header's heading with description added, font-size of components added, alignment added

--- a/DrupalCoder/src/Seva/Styles/Achievement.module.css
+++ b/DrupalCoder/src/Seva/Styles/Achievement.module.css
@@ -1,22 +1,29 @@
 .base {
-    width: 160px;
+    width: 165px;
     max-width: 100%;
     padding: 5px 0 10px 15px;
+    margin-bottom: 50px;
     border-left: 3px solid #f14d34;
     text-align: left;
 }
 
 .heading, .description {
     margin: 0;
+    text-align: left;
 }
 
 .heading {
     margin-bottom: 5px;
-    font-size: 24px;
-    color: rgba(255, 255, 255, 1);
+    font-size: 18px;
+    opacity: 1;
+}
+
+.headingLarge {
+    font-size: 36px;
 }
 
 .description {
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.8);
+    font-size: 10px;
+    opacity: 0.8;
+    max-width: 150px;
 }
