--- a/DrupalCoder/src/index.css
+++ b/DrupalCoder/src/index.css
@@ -2,4 +2,5 @@
 
 *{
     font-family: 'Montserrat';
+    margin: 0;
 }
